--- a/server/config/config.json
+++ b/server/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "root",
-    "password":"Vinuja24$@",
+    "password":"hiru14",
     "database": "e-learning",
     "host": "127.0.0.1",
     "dialect": "mysql"
